# Topics

./:  ipython_notebook_in_git.md  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  FunktionenToDol290916.md  IntegrationTest_txt_gensim.ipynb  IntroducingGensim.ipynb  IntroducingLda.ipynb  IntroducingMallet.ipynb  Introducing_MALLET.ipynb  Introducing_gensim.ipynb  Introducing_lda.ipynb  Introduction.ipynb  LICENSE  Pipfile  README.md  README.rst  README.txt  Visualizations.ipynb  conf.py  convert_corpfile.py  index.rst  ipynb_drop_output.py  ipynb_output_filter.py  ipython_notebook_in_git.md  lda2.py  lda_heatmap.py  lda_interactive.py  presentation_topic_over_time.ipynb  presentation_topic_over_time.py  pyproject.toml  remove_sw_hl.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.txt  topics.ipynb  tox.ini  (+1 more)
clean-ipynb/: ipynb_drop_output.py
dariah/: __init__.py  alt.py  api.py  utils.py
dariah_topics/: __init__.py  doc_meta_list.py  doclist.py  evaluation.py  mallet.py  meta.py  modeling.py  postprocessing.py  preprocessing.py  utils.py  visualization.py
docs/: CONTRIBUTING.md  Makefile  conf.py  dariah.core.rst  dariah.mallet.rst  dariah.rst  index.rst  ipynb_drop_output.py  make.bat
grenzboten_sample/: Cleinom_1914_Kriegstagebuch_94.txt  Dix_1914_Kriegstagebuch_37.txt  Ferdinand_1846_Tagebuch_72.txt  Grenzboten_1844_Tagebuch_56.txt  Grenzboten_1845_Tagebuch_62.txt  Grenzboten_1845_Tagebuch_81.txt  Grenzboten_1846_Tagebuch_51.txt  Grenzboten_1914_Kriegstagebuch_68.txt  Grenzboten_1915_Kriegstagebuch_33.txt  (+9 more)
notebooks/: 1-easy.ipynb  (+9 more)
(+86 files in other folders)
