[tool.poetry]
name = "dariah"
version = "2.0.1"
description = "A library for topic modeling and visualization."
license = "Apache-2.0"
authors = ["DARIAH-DE"]
readme = "README.rst"
homepage = "https://dariah-de.github.io/Topics"
repository = "https://github.com/DARIAH-DE/Topics"
line-length = 88

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2019.4.12"
pandas = "^0.24.2"
numpy = "^1.16.2"
lda = "^1.1.0"
matplotlib = "^3.0.3"
cophi = "^1.3.2"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]
black = {version = "*",allows-prereleases = true}
jupyterlab = "*"
pytest = "*"
sphinx = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
